--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 	
 	<h1>Michael r web design portfolio</h1>
-	<a href="virtualdesigin.html">      </a>
+	
+	<a href="virtualdesigin.html">   Visual Design   </a>
 </body>
 </html>
