--- a/virtualdesigin.html
+++ b/virtualdesigin.html
@@ -5,10 +5,55 @@
 <title>Untitled Document</title>
 </head>
 
-<body>
+	<body>
+<h1>-Visual Design Artifacts-</h1>
+	<br>
+	<h2>Editing, Combining,and Tracing Shapes </h2>
 	
-	<h1> vistual design artifacts</h1>
+	<img src="artificat/hey6.png" height="622" alt=""/>
+<h2>Artist's statement</h2>
 	
+	<p>Ms.espinal did this and she taught us how to use brush tools and things . </p>
 	
+<h2> fantastic beasts.</h2>
+	
+<img src="artificat/hey1.png" width="794" height="1034" alt=""/>
+	
+	<p>
+I thought about Strength and speed and durability. For my other style I thought about agility and flying. I believe that this can be a factor in winning. I firstly asked for help to lead to this where i'm at. Some powers like healing. Lastly i will like to include it also factors with the idea of equal stats
+.</p>
+		
+<h2>pop art</h2>
+	
+<img src="artificat/hey2.png" width="776" height="1006" alt=""/>
+	
+<p>I am choosing this certain one which was a celebrity portrait due to the fact that I did really well on it. I think that it was my best due to the amount of work that I put on the page and all other sorts of things like that. I chose the colors yellow and purple to go on the idea of lebron on the LA lakers. The creative process was making it darker and lighter to make a shadow effect. I also would like to include i did some shaders on it.
+</p>
+
+<h2>fantastic beast</h2>
+	
+<img src="artificat/hey3.png" alt=""/>
+	
+<p>
+I thought about Strength and speed and durability. For my other style I thought about agility and flying. I believe that this can be a factor in winning. I firstly asked for help to lead to this where i'm at. Some powers like healing. Lastly i will like to include it also factors with the idea of equal stats.
+</p>
+	
+<h2>Code Of Arms</h2>
+	
+<img src="hey4.png" width="786" height="1018" alt=""/>
+	
+<p>I used images online and used the pen tool on it. 
+I then used the term “gurre” to describe ware and efforts put in place for the coat of arms.
+It just is going with the coat and arms.
+.
+</p>
+<h2>On my block</h2>
+	
+<img src="artificat/hey5.png" alt=""/>
+	
+	<p>I used the shape tool to create the builds and windows. I used long buildings and included some like squares and triangles to complete my buildings. The most challenging was doing the roads bc it was hard IMO </p>
 </body>
 </html>
+
+	
+	
