--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
 <head>
 <meta charset="UTF-8">
 <title>Untitled Document</title>
+<link href="color.css" rel="stylesheet" type="text/css">
 </head>
-
+	
 		
 <body>
 	
 	<h1>Michael r web design portfolio</h1>
 	
 	<a href="virtualdesigin.html">   Visual Design   </a>
+	<br>
+	<br>
+    <a href="digital.html"> Digital Design</a>
+	<br>
+	<img src="goku-dancing.gif" width="240" height="250" alt=""/>
 </body>
 </html>
